# huffman_compression

./: .tags  .tags1  CMakeLists.txt  Compression.c  Compression.h  arquivo.txt  main.c  teste1.txt  teste2.txt  teste3.txt
APIV_minha/: ArvoreBinaria.c  ArvoreBinaria.h  Stringzao.c  Stringzao.h  main.c
ArvoreBinaria/: ArvoreBinaria.c  ArvoreBinaria.h  CMakeLists.txt
Stringzao/: CMakeLists.txt  Stringzao.c  Stringzao.h
